fix(search): hide overlap search result texts

--- a/src/components/search/search.styl
+++ b/src/components/search/search.styl
@@ -57,6 +57,7 @@
   height 55px
   font-size 16px
   line-height 55px
+  overflow hidden
 
 .os-search-resultItem--active
   background-color #eeeeee
